--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <header>
         <h1>300: The Battle of Thermopylae</h1>
     </header>
 
     <main>
         <section id="content">
-            <img id="storyImage" src="image 1.png" alt="Story Image">
+            <img id="storyImage" src="./assets/images/image1.png" alt="Story Image">
             <section id="story">
                 <h2 id="storyTitle">⚔️ The Epic Battle </h2>  
                 <p id="storyText">ONCE, IN A FARAWAY LAND CALLED GREECE...</p>
@@ -29,6 +28,5 @@
     </main>
 
     <script src="script.js"></script>
-
 </body>
 </html>
